--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,14 @@
         <img id="avatar" src="./assets/avatar.png" alt="" />
         <p>@henrique.s.rochaa</p>
       </div>
+      <div id="switch">
+        <button>
+          
+        </button>
+        <span>
+
+        </span>
+      </div>
       <ul>
         <li>
           <a href="#">Portifólio</a>
@@ -23,6 +31,25 @@
           <a href="https://linkedin.com/in/henriquesrocha" target="_blank">Linkedin</a>
         </li>
       </ul>
+      <div id="social-links">
+        <a href="https://github.com/henriquesrocha" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://github.com/henriquesrocha" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://github.com/henriquesrocha" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+        <a href="https://github.com/henriquesrocha" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
+        </a>
+      </div>
+      <footer>
+        Feito com ♥ pela Rocketseat
+      </footer>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
