--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img id="avatar" src="./assets/avatar.png" alt="" />
+        <img id="avatar" src="./assets/meuavatar.png" alt="" />
         <p>@henrique.s.rochaa</p>
       </div>
-      <div id="switch">
+      <div id="switch" onclick="ToggleMode()">
         <button>
           
         </button>
@@ -35,10 +35,10 @@
         <a href="https://github.com/henriquesrocha" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://github.com/henriquesrocha" target="_blank">
+        <a href="https://instagram.com/henrique.s.rochaa" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://github.com/henriquesrocha" target="_blank">
+        <a href="https://linkedin.com/in/henriquesrocha" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
         <a href="https://github.com/henriquesrocha" target="_blank">
@@ -46,10 +46,11 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pela Rocketseat
+        Março - 2024
       </footer>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
