removendo botão youtube

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
@@ -9,16 +15,12 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img id="avatar" src="./assets/meuavatar.png" alt="" />
+        <img id="avatar" src="./assets/meuavatar.png"/>
         <p>@henrique.s.rochaa</p>
       </div>
       <div id="switch" onclick="ToggleMode()">
-        <button>
-          
-        </button>
-        <span>
-
-        </span>
+        <button></button>
+        <span></span>
       </div>
       <ul>
         <li>
@@ -40,9 +42,6 @@
         </a>
         <a href="https://linkedin.com/in/henriquesrocha" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
-        </a>
-        <a href="https://github.com/henriquesrocha" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
         </a>
       </div>
       <footer>
